[package]

name = "piston2d-sprite"
version = "0.0.4"
authors = [
    "Coeuvre Wong <coeuvre@gmail.com>",
    "zummenix",
    "bvssvni <bvssvni@gmail.com>"
]
keywords = ["sprite", "animation", "2d", "piston"]
description = "A library for sprite hierarchy and scene management"
license = "MIT"
readme = "README.md"
repository = "https://github.com/pistondevelopers/sprite.git"
homepage = "https://github.com/pistondevelopers/sprite"

[lib]

name = "sprite"
path = "./src/lib.rs"

[dependencies]
pistoncore-event = "0.1.3"
interpolation = "0.0.6"
piston2d-graphics = "0.0.48"
piston-ai_behavior = "0.0.6"
uuid = "0.1.17"
